# lab3-ak

./: .coverage  README.md  pyproject.toml
.github/workflows/: python.yml
ak_lab3/: isa.py  machine.py  translator.py
diagrams/: .$diagram.drawio.bkp  diagram.drawio
samples/code/: cat.asm  hello.asm  hello_username.asm  prob2.asm
samples/json/: cat.json  hello.json  hello_username.json  prob2.json
tests/: test_golden.py
tests/golden/: cat.yml  hello.yml  hello_username.yml  prob2.yml
