[tool.poetry]
name = "ak_lab3"
version = "0.1.0"
description = ""
authors = ["  "]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
setuptools = "^70.0.0"
pytest = "^8.2.2"
black = "^24.4.2"
pylint = "^3.2.3"
mypy = "^1.10.0"
pytest-golden = "^0.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"